[package]
name = "peekzarr"
version = "0.1.0"
edition = "2021"

[dependencies]
zarrs = "0.19"
viuer = { version = "0.9", features = ["sixel"] }
image = "0.25"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ndarray = "0.16"
ndarray-stats = "0.6"
noisy_float = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
